fix classes: deleted hidden, added visible

--- a/software/notebook/style/main.css
+++ b/software/notebook/style/main.css
@@ -117,7 +117,7 @@ html, body {
 }
 
 .noteItemBlock {
-    display: flex;
+    display: none;
     flex-direction: row;
     max-height: 32px;
     max-width: 100%;
